UNI-1542 Contact navigation icons not showing correctly on mobile devices (#200)
* fix: dont let contact modal navigation overflow the screen

* fix: contact navigation icon display issues on mobile devices

--- a/src/components/modals/ManageContactModal.scss
+++ b/src/components/modals/ManageContactModal.scss
@@ -2,6 +2,8 @@
 
 .ManageContactModal {
   overflow: visible;
+  max-height: calc(95vh - 56px) !important;
+  bottom: -25px;
 
   .modalHeader {
     position: relative;
@@ -46,6 +48,12 @@
       padding: 5px !important;
       border-radius: 50%;
       background: rgba(41, 37, 36, 0.75);
+
+      svg {
+        width: 100%;
+        max-width: 24px;
+        max-height: 24px;
+      }
 
       &:hover {
         background: rgba(41, 37, 36, 0.9);
